--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ default-run = "aoc"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
