from gridpoint, part1/2 in template

--- a/src/day-template.rs.template
+++ b/src/day-template.rs.template
@@ -7,12 +7,20 @@ use itertools::Itertools;
 fn main() {
     let input = get_input(__DAY__);
 
-    let a = 1;
-    let b = 2;
+    let a = part1();
+    let b = part2();
 
     report(&a, &b);
 
     // uncomment once you have correct to support refactoring
     // assert_eq!(a, 1);
     // assert_eq!(b, 2);
+}
+
+fn part1() -> u32 {
+    1
+}
+
+fn part2() -> u32 {
+    2
 }
