--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ default-run = "aoc"
 
 [dependencies]
 anyhow = "1.0.75"
+chrono-humanize = "0.2.3"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
+time-humanize = "0.1.3"
