--- a/src/day-template.rs.template
+++ b/src/day-template.rs.template
@@ -7,19 +7,16 @@ use itertools::Itertools;
 fn main() {
     let input = get_input(__DAY__);
 
-    let a = part1();
-    let b = part2();
-
     report(
-        (|| part1(input.clone()), Some(1), None),
-        (|| part2(input.clone()), None, None),
+        (|| part1(&input), Some(1), None),
+        (|| part2(&input), None, None),
     );
 }
 
-fn part1() -> u32 {
+fn part1(input: &str) -> u32 {
     1
 }
 
-fn part2() -> u32 {
+fn part2(input: &str) -> u32 {
     2
 }
