--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ default-run = "aoc"
 [dependencies]
 anyhow = "1.0.75"
 chrono-humanize = "0.2.3"
+counter = "0.5.7"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
