--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ default-run = "aoc"
 anyhow = "1.0.75"
 chrono-humanize = "0.2.3"
 counter = "0.5.7"
+indexmap = "2.1.0"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
+num = "0.4.1"
 regex = "1.10.2"
 time-humanize = "0.1.3"
