--- a/src/day-template.rs.template
+++ b/src/day-template.rs.template
@@ -3,6 +3,7 @@
 extern crate lazy_static;
 use aoc::{get_input, report};
 use itertools::Itertools;
+use anyhow::{Context, Result};
 
 fn main() {
     let input = get_input(__DAY__);
@@ -13,10 +14,10 @@ fn main() {
     );
 }
 
-fn part1(input: &str) -> u32 {
+fn part1(input: &str) -> u64 {
     1
 }
 
-fn part2(input: &str) -> u32 {
+fn part2(input: &str) -> u64 {
     2
 }
