--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ indexmap = "2.1.0"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 regex = "1.10.2"
+strum = { version = "0.25.0", features = ["derive"] }
+strum_macros = "0.25.3"
 time-humanize = "0.1.3"
